update: Organize each functionality in its own module to keep track of the program's flow easier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["spaghetti"]
 edition = "2018"
  
 [dependencies]
+dirs = "4.0.0"
 reqwest = "*"
 tokio = { version = "1", features = ["full"] }
+
+[features]
  
