--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 colored = "2.0.0"
 console = "0.15.0"
 dirs = "4.0.0"
-reqwest = "*"
+reqwest = { version = "*", features = ["json"] }
+serde = { version = "1.0.136", features = ["serde_derive"] }
+serde_json = "1.0.79"
 tokio = { version = "1", features = ["full"] }
 
 [features]
