--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["spaghetti"]
 edition = "2018"
  
 [dependencies]
+clap = { version = "3.1.2", features = ["derive"] }
 colored = "2.0.0"
 console = "0.15.0"
 dirs = "4.0.0"
