--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ serde = { version = "1.0.136", features = ["serde_derive"] }
 serde_json = "1.0.79"
 tokio = { version = "1", features = ["full"] }
 
+[dev-dependencies]
+windows = "0.32.0"
+
 [features]
  
 
