--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,13 @@ authors = ["spaghetti"]
 edition = "2018"
  
 [dependencies]
-clap = { version = "3.1.2", features = ["derive"] }
+clap = { version = "4.0.18", features = ["derive"] }
 colored = "2.0.0"
 console = "0.15.0"
 dirs = "4.0.0"
 notify-rust = "4.5.6"
-reqwest = { version = "*", features = ["json"] }
-serde = { version = "1.0.136", features = ["serde_derive"] }
-serde_json = "1.0.79"
-tokio = { version = "1", features = ["full"] }
-
+tokio = { version = "1.21.2", features = ["full"] }
+ytdlrs_lib = { git = "https://github.com/alejandro0619/ytdlrs_lib", branch = "main"}
 [dev-dependencies]
 windows = "0.32.0"
 
